# 3DPhysics

./: CLAUDE.md  CMakeLists.txt
resources/scenes/: amiga.yaml  bunny.yaml  cat_statue.yaml  cube.yaml  icosahedron.yaml  isometric_level.yaml  knot.yaml  knot_gen.yaml  knot_point.yaml  mountains.yaml  shadow_point_test.yaml  shadow_spot_test.yaml  shadow_test.yaml  sponza.yaml  star.yaml  suzanne.yaml  teapot.yaml  tetrakis.yaml  torus.yaml  viking_room.yaml  world.yaml
src/: app_config.hpp  app_state.hpp  application.cpp  application.hpp  bresenham.hpp  camera.hpp  clipping.hpp  cubemap.cpp  cubemap.hpp  input_handler.hpp  light.hpp  main.cpp  material.hpp  platform_resources.hpp  polygon.hpp  projection.hpp  renderer.hpp  renderer_axis.hpp  renderer_fonts.hpp  renderer_overlay.hpp  scaler.hpp  scene.hpp  scene_ui.hpp  shadow_map.hpp  slib.cpp  slib.hpp  stats.hpp  z_buffer.hpp
src/backgrounds/: background.hpp  background_factory.cpp  background_factory.hpp  desert.cpp  hdr_panorama.cpp  hdr_panorama.hpp  image_png.cpp  skybox.cpp  skybox.hpp  twister.cpp  twister.hpp
src/ecs/: component_store.hpp  entity.hpp  light_component.hpp  light_system.hpp  material_component.hpp  material_system.hpp  mesh_component.hpp  mesh_system.hpp  name_component.hpp  physics_component.hpp  physics_system.hpp  prefab_factory.cpp  prefab_factory.hpp  registry.hpp  render_component.hpp  shadow_component.hpp  shadow_system.hpp  transform_component.hpp  transform_system.hpp
src/effects/: environment_map_effect.hpp  flat_effect.hpp  geometry_shaders.hpp  gouraud_effect.hpp  lighting.hpp  phong_effect.hpp  shadow_effect.hpp  textured_flat_effect.hpp  textured_gouraud_effect.hpp  textured_phong_effect.hpp  vertex_shaders.hpp  vertex_types.hpp
src/rasterizer/: rasterizer.hpp  rasterizer_shadow.hpp  rasterizer_slope.hpp  rasterizer_utils.hpp  rasterizer_walker.hpp
src/scenes/: scene_factory.cpp  scene_factory.hpp  scene_loader.cpp  scene_loader.hpp
tests/: test_ecs.cpp  test_transform.cpp
